--- a/pegasus/resources/master.yml
+++ b/pegasus/resources/master.yml
@@ -3,8 +3,8 @@ subnet_id: subnet-d96b46bd
 num_instances: 1
 key_name: luke-rhee
 security_group_ids: sg-6d46ad14
-instance_type: m3.xlarge
-tag_name: luke-rhee-cluster
+instance_type: m4.xlarge
+tag_name: lrh
 vol_size: 80
 role: master
 use_eips: true
