--- a/kafka-connect-twitter/resources/twitter-source.properties
+++ b/kafka-connect-twitter/resources/twitter-source.properties
@@ -1,7 +1,7 @@
 name=twitter-source
 connector.class=com.eneco.trading.kafka.connect.twitter.TwitterSourceConnector
 tasks.max=1
-topic=newtwitter
+topic=connect-twitter
 twitter.consumerkey=
 twitter.consumersecret=
 twitter.token=
