--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-add/kafka-connect-twitter/resources/twitter-source.properties
+kafka-connect-twitter/resources/twitter-source.properties
+imply-1.3.0/resources/conf/druid/_common/common.runtime.properties
+
 kafka-connect-twitter/kafka-connect-twitter/target
 kafka-streams/kafka-streams/target
