--- a/imply-1.3.0/resources/conf/druid/middleManager/runtime.properties
+++ b/imply-1.3.0/resources/conf/druid/middleManager/runtime.properties
@@ -1,4 +1,4 @@
-druid.service=druid/middleManager
+druid.service=druid/middlemanager
 druid.port=8091
 
 # Number of tasks per middleManager
@@ -7,9 +7,10 @@ druid.worker.capacity=3
 # Task launch parameters
 druid.indexer.runner.javaOpts=-server -Xmx2g -Duser.timezone=UTC -Dfile.encoding=UTF-8 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
 druid.indexer.task.baseTaskDir=var/druid/task
+druid.indexer.task.restoreTasksOnRestart=true
 
 # HTTP server threads
-druid.server.http.numThreads=25
+druid.server.http.numThreads=40
 
 # Processing threads and buffers
 druid.processing.buffer.sizeBytes=536870912
