adventures with flask

--- a/imply-1.3.0/resources/conf/druid/_common/common.runtime.properties
+++ b/imply-1.3.0/resources/conf/druid/_common/common.runtime.properties
@@ -64,8 +64,8 @@ druid.metadata.storage.connector.port=1527
 druid.storage.type=s3
 druid.storage.bucket=luke-rhee
 druid.storage.baseKey=druid/segments
-druid.s3.accessKey=AKIAJHMANNZFGKNCFPNA
-druid.s3.secretKey=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
+druid.s3.accessKey=
+druid.s3.secretKey=
 
 #
 # Indexing service logs
