--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 kafka-connect-twitter/resources/twitter-source.properties
 imply-1.3.0/resources/conf/druid/_common/common.runtime.properties
-
+flask/__pycache__
 kafka-connect-twitter/kafka-connect-twitter/target
 kafka-streams/kafka-streams/target
+
+.DS_Store
