--- a/imply-1.3.0/resources/conf/druid/_common/common.runtime.properties.example
+++ b/imply-1.3.0/resources/conf/druid/_common/common.runtime.properties.example
@@ -19,7 +19,7 @@ druid.startup.logging.logProperties=true
 
 #druid.zk.service.host=localhost
 #druid.zk.service.host=54.70.146.1
-druid.zk.service.host=ec2-54-70-146-1.us-west-2.compute.amazonaws.com,ec2-54-148-245-151.us-west-2.compute.amazonaws.com,ec2-52-34-186-244.us-west-2.compute.amazonaws.com,ec2-52-38-218-132.us-west-2.compute.amazonaws.com,ec2-52-42-233-20.us-west-2.compute.amazonaws.com
+druid.zk.service.host=ec2-54-70-146-1.us-west-2.compute.amazonaws.com:2181,ec2-52-34-186-244.us-west-2.compute.amazonaws.com:2181,ec2-52-38-218-132.us-west-2.compute.amazonaws.com:2181,ec2-52-35-196-76.us-west-2.compute.amazonaws.com:2181,ec2-52-42-233-20.us-west-2.compute.amazonaws.com:2181
 druid.zk.paths.base=/druid
 
 #
