--- a/kafka-connect-twitter/resources/twitter-source.properties
+++ b/kafka-connect-twitter/resources/twitter-source.properties
@@ -10,8 +10,8 @@ twitter.secret=
 # set output.format to string to output string key/values, it defaults to structured
 output.format=string
 
-# language=en,ru,de
-# stream.type=sample
+language=en,ru,de
+stream.type=sample
 # stream.type=filter
 # track.terms=news,music,hadoop,clojure,scala,fp,golang,python,fsharp,cpp,java
 # San Francisco OR New York City
