--- a/kafka/resources/server.properties.example
+++ b/kafka/resources/server.properties.example
@@ -110,8 +110,10 @@ log.retention.check.interval.ms=300000
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
 #zookeeper.connect=ec2-54-70-146-1.us-west-2.compute.amazonaws.com:2181,ec2-52-43-235-103.us-west-2.compute.amazonaws.com:2181,ec2-54-71-20-46.us-west-2.compute.amazonaws.com:2181,ec2-52-35-196-76.us-west-2.compute.amazonaws.com:2181,ec2-54-148-245-151.us-west-2.compute.amazonaws.com:2181,ec2-52-34-186-244.us-west-2.compute.amazonaws.com:2181,ec2-52-38-218-132.us-west-2.compute.amazonaws.com:2181,ec2-52-42-233-20.us-west-2.compute.amazonaws.com:2181
-zookeeper.connect=ec2-54-70-146-1.us-west-2.compute.amazonaws.com:2181,ec2-54-148-245-151.us-west-2.compute.amazonaws.com:2181,ec2-52-34-186-244.us-west-2.compute.amazonaws.com:2181,ec2-52-38-218-132.us-west-2.compute.amazonaws.com:2181,ec2-52-42-233-20.us-west-2.compute.amazonaws.com:2181
+zookeeper.connect=ec2-54-70-146-1.us-west-2.compute.amazonaws.com:2181,ec2-52-34-186-244.us-west-2.compute.amazonaws.com:2181,ec2-52-38-218-132.us-west-2.compute.amazonaws.com:2181,ec2-52-35-196-76.us-west-2.compute.amazonaws.com:2181,ec2-52-42-233-20.us-west-2.compute.amazonaws.com:2181
 
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=6000
+
+delete.topic.enable=true
