--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ kafka-connect-twitter/resources/twitter-source.properties
 imply-1.3.0/resources/conf/druid/_common/common.runtime.properties
 
 flask/__pycache__
+flask/flask
+flask/app/__pycache__
 
 kafka-connect-twitter/kafka-connect-twitter/target
 kafka-streams/kafka-streams/target
